✨ feat(user): creation endpoint
add POST route to user
