# internal/controller/user_controller.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"net/http"
 
+	"github.com/MarcelloBB/plata/internal/dto"
 	"github.com/MarcelloBB/plata/internal/usecase"
 	"github.com/gin-gonic/gin"
 )
@@ -32,4 +33,30 @@ func (uc *UserController) GetUsers(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, users)
+}
+
+// PostUsers godoc
+// @Summary      Post users
+// @Description  Post an user
+// @Tags         user
+// @Produce      json
+// @Success      200  {object}   model.User
+// @Failure      500  {object}  map[string]string
+// @Router       /user [post]
+func (uc *UserController) PostUser(c *gin.Context) {
+	var newUser dto.CreateUserRequest
+
+	if err := c.ShouldBindJSON(&newUser); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user, err := uc.userUseCase.CreateUser(newUser)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to post user"})
+		return
+	}
+
+	c.JSON(http.StatusCreated, user)
+
 }
